# nvidia-hw

./: .gitignore  Makefile  README.md  pyproject.toml
classes_and_inheritance/: car.py  car_base.py  data.csv  spec_machine.py  truck.py  utils.py
classes_and_inheritance/tests/: test_cai.py
descriptor/: account.py  tests.py
kv_store/: storage.py
kv_store/tests/: test_kv.py
magic_file/: file.py
metrics_client/: client.py  run.py  send.py
newspaper_app/: Pipfile  settings.py  urls.py
newspaper_app/accounts/: forms.py
newspaper_app/accounts/migrations/: 0001_initial.py
newspaper_app/articles/: models.py  views.py
newspaper_app/articles/migrations/: 0001_initial.py
newspaper_app/config/: settings.py  urls.py
newspaper_app/pages/: tests.py
to_json/: to_json.py
to_json/tests/: test_to_json.py
